# Alloy-Studio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  windows.yml
alloy-app/: Cargo.toml
alloy-app/src/: app.rs  cli.rs  logging.rs  main.rs  signal.rs
alloy-core/: Cargo.toml
alloy-core/src/: buffer.rs  config.rs  document.rs  error.rs  lib.rs  search.rs  selection.rs  syntax.rs  workspace.rs
alloy-git/: Cargo.toml
alloy-git/src/: ai_message.rs  blame.rs  branch.rs  commit.rs  conflict.rs  diff.rs  error.rs  lib.rs  repo.rs  status.rs
alloy-gradle/: Cargo.toml
alloy-gradle/src/: error.rs  hardware.rs  lib.rs  opmode.rs  parser.rs  project.rs  repair.rs  runner.rs
alloy-lsp/: Cargo.toml
alloy-lsp/src/: capabilities.rs  client.rs  error.rs  ftc_jdtls.rs  lib.rs  manager.rs  protocol.rs
alloy-proxy/: Cargo.toml
alloy-proxy/src/: digest.rs  error.rs  fs_ops.rs  handler.rs  lib.rs  server.rs  watcher.rs
alloy-rpc/: Cargo.toml
alloy-rpc/src/: codec.rs  envelope.rs  error.rs  lib.rs  request.rs  response.rs  transport.rs  types.rs
alloy-telemetry/: Cargo.toml
alloy-telemetry/src/: error.rs  history.rs  lib.rs  protocol.rs  server.rs  stream.rs
alloy-ui/: Cargo.toml
alloy-ui/src/: activity_bar.rs  bottom_panel.rs  bridge.rs  command_palette.rs  lib.rs  shell.rs  statusbar.rs  tab_strip.rs  theme.rs  title_bar.rs  toast.rs  welcome.rs
alloy-ui/src/pages/: conflict_resolver.rs  mod.rs  settings.rs  source_control.rs
alloy-ui/src/panels/: git_timeline.rs  gradle_repair.rs  hardware_mapper.rs  mod.rs  opmode.rs  outline.rs  telemetry.rs
