[package]
name        = "alloy-git"
description = "Git integration: status, diff, blame, branch ops, conflict resolution, AI commit messages"
publish     = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-core = { path = "../alloy-core" }
tokio      = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
git2       = { workspace = true }
chrono     = { workspace = true }
indexmap   = { workspace = true }
regex      = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test        = { workspace = true }
tempfile          = { workspace = true }
pretty_assertions = { workspace = true }
