[package]
name        = "alloy-gradle"
description = "Gradle + FTC build tooling: runner, error parser, repair engine, OpMode scanner, hardware config"
publish     = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-rpc  = { path = "../alloy-rpc" }
alloy-core = { path = "../alloy-core" }
tokio      = { workspace = true }
tokio-stream = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
regex      = { workspace = true }
walkdir    = { workspace = true }
once_cell  = { workspace = true }
indexmap   = { workspace = true }
semver     = { workspace = true }

[dev-dependencies]
tokio-test        = { workspace = true }
pretty_assertions = { workspace = true }
insta             = { workspace = true }
tempfile          = { workspace = true }
