[package]
name        = "alloy-rpc"
description = "IPC JSON-RPC protocol — message envelopes, typed events, async codec"
publish     = false
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
dashmap      = { workspace = true }
parking_lot  = { workspace = true }
once_cell    = { workspace = true }
